--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,40 +1,49 @@
 <nav role="navigation" aria-label="Main navigation">
-  <ul class="navigation-list">
+
+    <div class="text-delta mb-2">Introduction</div>
     {%- assign pages_list = site.html_pages | sort:"nav_order" -%}
+    <ul class="navigation-list">
     {%- for node in pages_list -%}
-      {%- unless node.nav_exclude -%}
-        {%- if node.parent == nil -%}
-          <li class="navigation-list-item{% if page.url == node.url or page.parent == node.title or page.grand_parent == node.title %} active{% endif %}">
-            {%- if page.parent == node.title or page.grand_parent == node.title -%}
-              {%- assign first_level_url = node.url | absolute_url -%}
-            {%- endif -%}
-            <a href="{{ node.url | absolute_url }}" class="navigation-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
-            {%- if node.has_children -%}
-              {%- assign children_list = site.html_pages | where: "parent", node.title | sort:"nav_order" -%}
-              <ul class="navigation-list-child-list ">
-                {%- for child in children_list -%}
-                  <li class="navigation-list-item {% if page.url == child.url or page.parent == child.title %} active{% endif %}">
-                    {%- if page.url == child.url or page.parent == child.title -%}
-                      {%- assign second_level_url = child.url | absolute_url -%}
-                    {%- endif -%}
-                    <a href="{{ child.url | absolute_url }}" class="navigation-list-link{% if page.url == child.url %} active{% endif %}">{{ child.title }}</a>
-                    {%- if child.has_children -%}
-                        {%- assign grand_children_list = site.html_pages | where: "parent", child.title | sort:"nav_order" -%}
-                        <ul class="navigation-list-child-list">
-                        {%- for grand_child in grand_children_list -%}
-                          <li class="navigation-list-item {% if page.url == grand_child.url %} active{% endif %}">
-                            <a href="{{ grand_child.url | absolute_url }}" class="navigation-list-link{% if page.url == grand_child.url %} active{% endif %}">{{ grand_child.title }}</a>
-                          </li>
-                        {%- endfor -%}
-                      </ul>
-                    {%- endif -%}
-                  </li>
-                {%- endfor -%}
-              </ul>
-            {%- endif -%}
-          </li>
-        {%- endif -%}
-      {%- endunless -%}
-    {%- endfor -%}
+      {%- if node.group == "introduction" -%}
+        <li class="navigation-list-item{% if page.url == node.url %} active{% endif %}">
+          <a href="{{ node.url | absolute_url }}" class="navigation-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
+        </li>
+      {%- endif -%}
+    {%- endfor -%}    
+    </ul>
+
+    <div class="text-delta mb-2 mt-6">Guides</div>
+    <ul class="navigation-list">
+    {%- for node in pages_list -%}
+      {%- if node.group == "guides" -%}
+        <li class="navigation-list-item{% if page.url == node.url %} active{% endif %}">
+        <a href="{{ node.url | absolute_url }}" class="navigation-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
+      </li>
+      {%- endif -%}
+    {%- endfor -%}    
+    </ul>
+
+    <div class="text-delta mb-2 mt-6">Testing</div>
+    <ul class="navigation-list">
+    {%- for node in pages_list -%}
+      {%- if node.group == "testing" -%}
+        <li class="navigation-list-item{% if page.url == node.url %} active{% endif %}">
+        <a href="{{ node.url | absolute_url }}" class="navigation-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
+      </li>
+      {%- endif -%}
+    {%- endfor -%}    
+    </ul>
+
+    <div class="text-delta mb-2 mt-6">Deployment</div>
+    <ul class="navigation-list">
+    {%- for node in pages_list -%}
+      {%- if node.group == "deployment" -%}
+        <li class="navigation-list-item{% if page.url == node.url %} active{% endif %}">
+        <a href="{{ node.url | absolute_url }}" class="navigation-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
+      </li>
+      {%- endif -%}
+    {%- endfor -%}    
+    </ul>
+
   </ul>
 </nav>
