--- a/_layouts/1.4/layout.html
+++ b/_layouts/1.4/layout.html
@@ -22,7 +22,7 @@ layout: table_wrappers
       </div>
 
       <div class="navigation main-nav js-main-nav">
-        {% include nav.html %}
+        {% include 1.4/nav.html %}
       </div>
       <footer class="site-footer">
         <p class="text-small text-grey-dk-000 mb-4">This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.</p>
