--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -1,3 +1,19 @@
 //
 // Custom overrides from a user.
 //
+
+blockquote {
+    background-color: rgba(255,229,100,0.3);
+    border-left-color: #ffe564;
+    border-left-width: 9px;
+    border-left-style: solid;
+    padding: 1em 2em 1em 1.2em;
+    margin-bottom: 1.5em;
+    margin-top: 1em;
+    margin-left: 0;
+    margin-right: 0;
+
+    p {
+        margin: 0;
+    }
+}
